[package]
name = "tca62724fmg"
version = "0.1.2"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "TCA62724FMG RGB LED driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/tca62724fmg"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "TCA62724FMG",
    "rgbled"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
stm32h7 = { version = "0.10.0", features = ["stm32h743"] }
stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"]}
